sedrila.css: fix broken css color for code links

--- a/baseresources/sedrila.css
+++ b/baseresources/sedrila.css
@@ -27,7 +27,6 @@ a:link {
 }
 
 a>code {
-    color: var(#3b8e1e);
     text-decoration: underline;
 }
 
